; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/windowscodecs/extr_palette.c_box_count.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/windowscodecs/extr_palette.c_box_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.histogram = type { i32 }
%struct.box = type { i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.histogram*, %struct.box*)* @box_count to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @box_count(%struct.histogram* %0, %struct.box* %1) #0 {
  %3 = alloca %struct.histogram*, align 8
  %4 = alloca %struct.box*, align 8
  store %struct.histogram* %0, %struct.histogram** %3, align 8
  store %struct.box* %1, %struct.box** %4, align 8
  %5 = load %struct.histogram*, %struct.histogram** %3, align 8
  %6 = load %struct.box*, %struct.box** %4, align 8
  %7 = getelementptr inbounds %struct.box, %struct.box* %6, i32 0, i32 5
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.box*, %struct.box** %4, align 8
  %10 = getelementptr inbounds %struct.box, %struct.box* %9, i32 0, i32 4
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.box*, %struct.box** %4, align 8
  %13 = getelementptr inbounds %struct.box, %struct.box* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.box*, %struct.box** %4, align 8
  %16 = getelementptr inbounds %struct.box, %struct.box* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.box*, %struct.box** %4, align 8
  %19 = getelementptr inbounds %struct.box, %struct.box* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.box*, %struct.box** %4, align 8
  %22 = getelementptr inbounds %struct.box, %struct.box* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @histogram_count(%struct.histogram* %5, i32 %8, i32 %11, i32 %14, i32 %17, i32 %20, i32 %23)
  ret i32 %24
}

declare dso_local i32 @histogram_count(%struct.histogram*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
